# SupportAgent

./: .dockerignore  .env.example  .gitignore  Dockerfile  main.py  pyproject.toml  sample_text
.claude/: launch.json
app/: config.py  llm.py  main.py  qdrant_client.py
app/agents/: llm.py  react_agent.py  reranking.py
app/agents/memory/: postgres_saver.py  postgres_store.py
app/agents/prompts/: brain_prompt.py  support_agent_prompt.py
app/crud/: __init__.py  address.py  conversation.py  customer.py  db.py  demo.py  order.py  order_item.py  product.py  ticket.py
app/logging/: config.py
app/models/: address.py  conversation.py  customer.py  order.py  order_item.py  product.py  ticket.py
app/rag/: retriver.py
app/routes/: auth.py  chat.py  conversation.py  demo.py  ticket.py
app/schemas/: auth_schema.py  chat_schema.py  kb_schema.py
app/scripts/: ingest_data.py
app/security/: api_key_security.py  token_verification.py
app/tools/: check_refund_eligiblity.py  customer_tools.py  get_order_status.py  lookup_customer.py  order_tools.py  refund_tools.py  search_knowledge_base.py  store_memory.py  ticket_tools.py  tools.py
app/utils/: jwt_utils.py  password.py  rate_limit.py
data/: policy_docs.json
eval/: eval_set.json
halo-frontend/: .env.example  README.md  index.html  package-lock.json  package.json
halo-frontend/src/: App.jsx  index.css
halo-frontend/src/api/: auth.js  chat.js  client.js  conversations.js  demo.js
halo-frontend/src/components/auth/: AuthPage.jsx  LoginForm.jsx  SignupForm.jsx  auth.module.css
halo-frontend/src/components/chat/: ChatApp.jsx  ChatHeader.jsx  Composer.jsx  ConversationList.jsx  Message.jsx  MessageList.jsx  Profile.jsx  SampleData.jsx  Sidebar.jsx  WelcomeState.jsx  chat.module.css
halo-frontend/src/components/ui/: Icons.jsx  Spinner.jsx  Toast.jsx  (+1 more)
halo-frontend/src/context/: AuthContext.jsx
halo-frontend/src/hooks/: useChat.js  useConversations.js
halo-frontend/src/lib/: jwt.js  storage.js  time.js  tools.js
scripts/: prepare_data.py  prepare_orders.py
