[project]
name = "supportagent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "cohere>=7.0.4",
    "dotenv>=0.9.9",
    "fastapi>=0.137.1",
    "jsonpointer>=3.1.1",
    "langchain>=1.3.9",
    "langchain-core>=1.4.7",
    "langchain-groq>=1.1.3",
    "langgraph>=1.2.5",
    "langgraph-checkpoint-postgres>=3.1.0",
    "passlib[argon2]>=1.7.4",
    "psycopg>=3.3.4",
    "psycopg-binary>=3.3.4",
    "psycopg2-binary>=2.9.12",
    "pydantic[email]>=2.13.4",
    "pyjwt>=2.13.0",
    "python-json-logger>=4.1.0",
    "qdrant-client>=1.18.0",
    "slowapi>=0.1.10",
    "sqlalchemy>=2.0.51",
    "transformers>=5.12.1",
    "uuid>=1.30",
    "uvicorn>=0.49.0",
]

[dependency-groups]
dev = [
    "datasets>=5.0.0",
    "pandas>=3.0.3",
]
